--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
     <head>
         <link href="css/style.css" type="text/css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+
     </head>
 
     <body>
@@ -23,19 +25,35 @@
                     </ul>
                 </div>
                 <div class="intro_text">
-                    <h1>Hello, I am a UX/UI designer, based in Toronto</h1>
-                    <h4 class="contents1">I design to solve problems, engage people and create a delightful user experience.</h4>
+                    <h1>Hello, My name is Ahra Ko.</h1>
+                    <h4 class="contents1">I am a UX.UI Designer, based in Toronto. I design to solve problems, engage people and create a delightful user experience.</h4>
                 </div>
             </div>
+        </div>
+
+        <div class="Logo">
+            <img src="images/Logo_ocean.png">
+        </div>
+
+        <section class="mySkills">
+            <h2>My UX Skills</h2>
+            <h4>I am a Toronto-based UX designer who is dedicated to delivering outstanding and meaningful user experiences. My technical background and user-focused approach complement my knack for crafting compelling digital products through the use of evidence-based design.</h4>
+            <div class="flexContainer">
+                <img>
+                <p>User Research / Usability Testing / Heuristic Evaluation</p>
+                <p>Personal Creation / Affinity Diagramming / Responsive Design</p>
+                <p>Information Architecture / Wireframe Production / Prototyping</p>
+            </div>
+        </section>
 
         <div class="main_text">
-            <h1>My Work</h1>
+            <h2>My Work</h2>
             <ul class="contents">
                 <li class="CaseStudy">
                     <div class="CRA">
                     </div>
                     <div class="CRA_text">
-                        <h2>Redesigning Canada Revenue Agency</h2>
+                        <h3>Redesigning Canada Revenue Agency</h3>
                         <h4>Delivered an understandable way to allow users to conveniently navigate to the desired destination on the CRA website.</h4>
                     </div>
                 </li>
@@ -43,7 +61,7 @@
                     <div class="Dogs">
                     </div>
                     <div class="Dogs_text">
-                        <h2>Redesigning Forever Freed Dogs Website</h2>
+                        <h3>Redesigning Forever Freed Dogs Website</h3>
                         <h4>Redesigned the non-profit dog rescue website to help more dogs find their forever homes.</h4>
                     </div>
                 </li>
@@ -55,7 +73,7 @@
                     <div class="Phonebox">
                     </div>
                     <div class="Phonebox_text">
-                        <h2>email Template Redesign</h2>
+                        <h3>email Template Redesign</h3>
                         <h4>Enhanced customer experience by redesigning the welcome letters</h4>
                     </div>
                 </li>
@@ -63,19 +81,19 @@
                     <div class="Travel">
                     </div>
                     <div class="Travel_text">
-                        <h2>Developing a travel app</h2>
+                        <h3>Developing a travel app</h3>
                         <h4>Developed a mobile app for travellers</h4>
                     </div>
                 </li>
             </ul>
         </div>
         <div class="logo_story">
-            <h1>My Logo</h1>
+            <h2>My Logo Story</h2>
             <h4>This was made by me on Adobe Photoshop. All the lines and dots are from my name, 아라.</h4>
             <h4>Most Korean names are written in Chinese characters. So, the sound and meaning are different can it can be written in both Korean and Chinese characters.</h4>
             <h4>However, my name is made in pure Korean and it has only one form. Therefore, I made my logo by transforming my Korean name into the form of "Hun-min-jeong-um", which is the origin of Korean.</h4>
             <h4>아라 means "Ocean".</h4>
-            <img src="images/Logo_final.png">
+            <img src="images/hunminjeongum.jpeg">
         </div>
         <footer>
             <div class="footer_content">
