--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                     <div class="CRA_text">
                         <h3>Redesigning Canada Revenue Agency</h3>
                         <h4>Delivered an understandable way to allow users to conveniently navigate to the desired destination on the CRA website.</h4>
+                        <button type="button">View more</button>
                     </div>
                 </li>
                 <li class="CaseStudy2">
@@ -63,30 +64,30 @@
                     <div class="Dogs_text">
                         <h3>Redesigning Forever Freed Dogs Website</h3>
                         <h4>Redesigned the non-profit dog rescue website to help more dogs find their forever homes.</h4>
+                        <button type="button">View more</button>
                     </div>
                 </li>
-            </ul>
-        </div>
-        <div class="main_text_2">
-            <ul class="contents2">
                 <li class="CaseStudy3">
                     <div class="Phonebox">
                     </div>
                     <div class="Phonebox_text">
-                        <h3>email Template Redesign</h3>
-                        <h4>Enhanced customer experience by redesigning the welcome letters</h4>
+                        <h3>Redesigning Forever Freed Dogs Website</h3>
+                        <h4>Redesigned the non-profit dog rescue website to help more dogs find their forever homes.</h4>
+                        <button type="button">View more</button>
                     </div>
                 </li>
                 <li class="CaseStudy4">
                     <div class="Travel">
                     </div>
                     <div class="Travel_text">
-                        <h3>Developing a travel app</h3>
-                        <h4>Developed a mobile app for travellers</h4>
+                        <h3>Developing Travel Mobile App</h3>
+                        <h4>Suggested a mobile application for travellers who want to meet other travellers on their trips</h4>
+                        <button type="button">View more</button>
                     </div>
                 </li>
             </ul>
         </div>
+
         <div class="logo_story">
             <h2>My Logo Story</h2>
             <h4>This was made by me on Adobe Photoshop. All the lines and dots are from my name, 아라.</h4>
